// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Snapshot 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-lsslt9-QxCounter-root"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color brand 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-lsslt9-QxCounter-root"
    data-testid="testStyleParams-color-brand"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color danger 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_danger css-zlr48u-QxCounter-root"
    data-testid="testStyleParams-color-danger"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color info 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_info css-rxisjy-QxCounter-root"
    data-testid="testStyleParams-color-info"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color secondary 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_secondary css-1lgmucp-QxCounter-root"
    data-testid="testStyleParams-color-secondary"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color success 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_success css-mr4buf-QxCounter-root"
    data-testid="testStyleParams-color-success"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color text 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_text css-1b4e64u-QxCounter-root"
    data-testid="testStyleParams-color-text"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params color warning 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_warning css-169rub1-QxCounter-root"
    data-testid="testStyleParams-color-warning"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params size large 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-lsslt9-QxCounter-root"
    data-testid="testStyleParams-size-large"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params size medium 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_medium QxCounter_color_brand css-v5l983-QxCounter-root"
    data-testid="testStyleParams-size-medium"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params size small 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_small QxCounter_color_brand css-s128ef-QxCounter-root"
    data-testid="testStyleParams-size-small"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params type filled 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_filled QxCounter_size_large QxCounter_color_brand css-lsslt9-QxCounter-root"
    data-testid="testStyleParams-type-filled"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params type ghosted 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_ghosted QxCounter_size_large QxCounter_color_brand css-180fztq-QxCounter-root"
    data-testid="testStyleParams-type-ghosted"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter style params type white 1`] = `
<DocumentFragment>
  <span
    class="QxCounter QxCounter_type_white QxCounter_size_large QxCounter_color_brand css-1y97ghr-QxCounter-root"
    data-testid="testStyleParams-type-white"
  >
    99
  </span>
</DocumentFragment>
`;
